new period and positions
